tests/lean/doNotation1.lean.expected.out
doNotation1.lean:4:0: error: 'y' cannot be reassigned
doNotation1.lean:8:2: error: 'y' cannot be reassigned
doNotation1.lean:20:7: error: invalid reassignment, value has type
  Vector Nat (n + 1)
but is expected to have type
  Vector Nat n
doNotation1.lean:25:7: error: invalid reassignment, value has type
  Bool
but is expected to have type
  Nat
doNotation1.lean:24:0: error: type mismatch, 'for' has type
  List Nat
but is expected to have type
  List Bool
